Removing OP var from search

--- a/packages/storybook-html/stories/deprecated/header-legacy/header_no-local-search.html
+++ b/packages/storybook-html/stories/deprecated/header-legacy/header_no-local-search.html
@@ -15,7 +15,7 @@
                         <label for="edit-q" class="visually-hidden">Search term</label>
                         <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="legacy-header__search-query-input">
                         <span class="legacy-header__search-query-button">
-                            <input type="submit" name="op" value="Search" class="legacy-header__search-query-submit">
+                            <input type="submit" value="Search" class="legacy-header__search-query-submit">
                         </span>
                     </div>
                 </fieldset>
