--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -321,7 +321,7 @@
                 <label for="edit-q" class="visually-hidden">Search term</label>
                 <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" autocomplete="off" class="uq-header__search-query-input">
                 <span class="uq-header__search-query-button">
-                  <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
+                  <input type="submit" value="Search" class="uq-header__search-query-submit">
                 </span>
               </div>
               <div class="uq-header__search-range">
@@ -434,7 +434,7 @@
                 <label for="edit-q" class="visually-hidden">Search term</label>
                 <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="legacy-header__search-query-input">
                 <span class="legacy-header__search-query-button">
-                  <input type="submit" name="op" value="Search" class="legacy-header__search-query-submit">
+                  <input type="submit" value="Search" class="legacy-header__search-query-submit">
                 </span>
               </div>
             </fieldset>
