--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -179,7 +179,7 @@
       </nav>
       <div class="uq-header__search" data-gtm-category="Search">
         <div class="uq-header__search-container">
-          <form action="https://www.uq.edu.au/search" method="get" data-gtm-action="Text search" data-gtm-form-action>
+          <form action="https://search.uq.edu.au" method="get" data-gtm-action="Text search" data-gtm-form-action>
             <fieldset>
               <div class="uq-header__search-query">
                 <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
@@ -401,7 +401,7 @@
                   <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
+                  <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
@@ -438,7 +438,7 @@
                   <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
+                  <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
@@ -498,7 +498,7 @@
                   <a href="https://www.uq.edu.au/news/contacts" class="uq-footer__navigation-link">Media team contacts</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
+                  <a href="https://about.uq.edu.au/experts" class="uq-footer__navigation-link">Find a subject matter expert</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
@@ -535,7 +535,7 @@
                   <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
+                  <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://my.uq.edu.au/student-support" class="uq-footer__navigation-link">Student support</a>
