--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -435,7 +435,7 @@
                   <a href="https://my.uq.edu.au" class="uq-footer__navigation-link">my.UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
+                  <a href="https://programs-courses.uq.edu.au" class="uq-footer__navigation-link">Programs and courses</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
@@ -478,7 +478,7 @@
                   <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://www.uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
+                  <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
@@ -532,7 +532,7 @@
                   <a href="https://my.uq.edu.au" class="uq-footer__navigation-link">my.UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
+                  <a href="https://programs-courses.uq.edu.au" class="uq-footer__navigation-link">Programs and courses</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://about.uq.edu.au/academic-calendar" class="uq-footer__navigation-link">Key dates</a>
@@ -575,7 +575,7 @@
                   <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://www.uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
+                  <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
