--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -579,7 +579,7 @@
                   <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://www.uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
+                  <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
@@ -676,7 +676,7 @@
                   <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://www.uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
+                  <a href="https://organisation.about.uq.edu.au" class="uq-footer__navigation-link">Divisions and departments</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
