--- a/packages/private-design-output/src/example.html
+++ b/packages/private-design-output/src/example.html
@@ -129,7 +129,7 @@
                 <li><a href="#">Introducing UQ</a></li>
                 <li><a href="#">Vision, values and strategy</a></li>
                 <li><a href="#">Organisational structure and governance</a></li>
-                <li><a href="#">Teaching and learning</a></li>
+                <li><a href="#">Learning, teaching and student experience</a></li>
                 <li><a href="#">Faculties, schools, institutes and centres</a></li>
                 <li><a href="#">Colleges and accommodation</a></li>
                 <li><a href="#">Community faciliites and services</a></li>
@@ -289,7 +289,7 @@
                             <li><a href="#">Introducing UQ</a></li>
                             <li><a href="#">Vision, values and strategy</a></li>
                             <li><a href="#">Organisational structure and governance</a></li>
-                            <li><a href="#">Teaching and learning</a></li>
+                            <li><a href="#">Learning, teaching and student experience</a></li>
                             <li><a href="#">Faculties, schools, institutes and centres</a></li>
                             <li><a href="#">Colleges and accommodation</a></li>
                             <li><a href="#">Community faciliites and services</a></li>
@@ -675,7 +675,7 @@
               <h2 class="uq-footer__navigation-title">Library</h2>
               <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Library services</a>
+                  <a href="#" class="uq-footer__navigation-link">Research and publish</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="#" class="uq-footer__navigation-link">Search catalogue</a>
@@ -775,7 +775,7 @@
               <button href="#" class="uq-accordion__toggle uq-footer__navigation-toggle">Library</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
-                  <a href="#" class="uq-footer__navigation-link">Library services</a>
+                  <a href="#" class="uq-footer__navigation-link">Research and publish</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="#" class="uq-footer__navigation-link">Search catalogue</a>
