--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -415,7 +415,7 @@
                   <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Careers at UQ</a>
+                  <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -455,13 +455,13 @@
                   <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
+                  <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Library services</a>
+                  <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Research and publish</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/research-tools-techniques" class="uq-footer__navigation-link">Research tools</a>
+                  <a href="https://web.library.uq.edu.au/visit" class="uq-footer__navigation-link">Visit</a>
                 </li>
               </ul>
             </li>
@@ -512,7 +512,7 @@
                   <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Careers at UQ</a>
+                  <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -552,13 +552,13 @@
                   <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
+                  <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Library services</a>
+                  <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Research and publish</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/research-tools-techniques" class="uq-footer__navigation-link">Research tools</a>
+                  <a href="https://web.library.uq.edu.au/visit" class="uq-footer__navigation-link">Visit</a>
                 </li>
               </ul>
             </li>
@@ -609,7 +609,7 @@
         <nav class="uq-footer__footer" aria-label="Terms and conditions">
           <ul class="uq-footer__footer-list">
               <li class="uq-footer__footer-item">
-                  <a href="https://www.uq.edu.au/legal/website-terms-of-use" class="uq-footer__link">Privacy and terms of use</a>
+                  <a href="https://www.uq.edu.au/legal/website-terms-of-use" class="uq-footer__link">Copyright, privacy and disclaimer</a>
               </li>
               <li class="uq-footer__footer-item">
                 <a href="https://uq.edu.au/accessibility" class="uq-footer__link">Accessibility</a>
