Header and Footer updates (#606)
* Updated Links

* update footer terms location

* Linting update

* updated Research link

* updated legal link

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -177,7 +177,7 @@
                           <ul>
                             <li><a href="https://about.uq.edu.au/university-profile" data-gtm-label="About > Introducing UQ">Introducing UQ</a></li>
                             <li><a href="https://about.uq.edu.au/strategic-plan" data-gtm-label="About > Vision, values and strategy">Vision, values and strategy</a></li>
-                            <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
+                            <li><a href="https://about.uq.edu.au/learning-teaching-student-experience" data-gtm-label="About > Learning, teaching and student experience">Learning, teaching and student experience</a></li>
                             <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
                             <li><a href="https://about.uq.edu.au/governance-and-organisational-structure" data-gtm-label="About > Governance and organisational structure">Governance and organisational structure</a></li>
                             <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
@@ -200,8 +200,8 @@
                         <div class="megamenu__heading">Working at UQ</div>
                         <div class="megamenu__menu">
                           <ul>
-                            <li><a href="https://careers.uq.edu.au" data-gtm-label="About > Careers at UQ">Careers at UQ</a></li>
-                            <li><a href="https://careers.uq.edu.au/search-jobs" data-gtm-label="About > Jobs search">Jobs search</a></li>
+                            <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Careers at UQ">Careers at UQ</a></li>
+                            <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Jobs search">Jobs search</a></li>
                           </ul>
                         </div>
                       </div>
@@ -355,7 +355,7 @@
                 <ul>
                   <li><a href="https://about.uq.edu.au/university-profile" data-gtm-label="About > Introducing UQ">Introducing UQ</a></li>
                   <li><a href="https://about.uq.edu.au/strategic-plan" data-gtm-label="About > Vision, values and strategy">Vision, values and strategy</a></li>
-                  <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
+                  <li><a href="https://about.uq.edu.au/learning-teaching-student-experience" data-gtm-label="About > Learning, teaching and student experience">Learning, teaching and student experience</a></li>
                   <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
                   <li><a href="https://about.uq.edu.au/governance-and-organisational-structure" data-gtm-label="About > Governance and organisational structure">Governance and organisational structure</a></li>
                   <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
@@ -374,8 +374,8 @@
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Working at UQ</a>
                 <ul>
-                  <li><a href="https://careers.uq.edu.au" data-gtm-label="About > Careers at UQ">Careers at UQ</a></li>
-                  <li><a href="https://careers.uq.edu.au/search-jobs" data-gtm-label="About > Jobs search">Jobs search</a></li>
+                  <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Careers at UQ">Careers at UQ</a></li>
+                  <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Jobs search">Jobs search</a></li>
                 </ul>
               </li>
             </ul>
@@ -516,7 +516,7 @@
                   <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Careers at UQ</a>
+                  <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -556,13 +556,13 @@
                   <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
+                  <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Library services</a>
+                  <a href="https://web.library.uq.edu.au/research-and-publish" class="uq-footer__navigation-link">Research and publish</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/research-tools-techniques" class="uq-footer__navigation-link">Research tools</a>
+                  <a href="https://web.library.uq.edu.au/visit" class="uq-footer__navigation-link">Visit</a>
                 </li>
               </ul>
             </li>
@@ -613,7 +613,7 @@
                   <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Careers at UQ</a>
+                  <a href="https://about.uq.edu.au/careers" class="uq-footer__navigation-link">Careers at UQ</a>
                 </li>
                 <li class="uq-footer__navigation-item">
                   <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -653,13 +653,13 @@
                   <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
+                  <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Library services</a>
+                  <a href="https://web.library.uq.edu.au/research-and-publish" class="uq-footer__navigation-link">Research and publish</a>
                 </li>
                 <li class="uq-footer__navigation-item">
-                  <a href="https://web.library.uq.edu.au/research-tools-techniques" class="uq-footer__navigation-link">Research tools</a>
+                  <a href="https://web.library.uq.edu.au/visit" class="uq-footer__navigation-link">Visit</a>
                 </li>
               </ul>
             </li>
@@ -710,7 +710,7 @@
         <nav class="uq-footer__footer" aria-label="Terms and conditions">
           <ul class="uq-footer__footer-list">
               <li class="uq-footer__footer-item">
-                  <a href="https://www.uq.edu.au/legal/website-terms-of-use" class="uq-footer__link">Privacy and terms of use</a>
+                  <a href="https://www.uq.edu.au/legal/copyright-privacy-disclaimer/" class="uq-footer__link">Copyright, privacy and disclaimer</a>
               </li>
               <li class="uq-footer__footer-item">
                 <a href="https://uq.edu.au/accessibility" class="uq-footer__link">Accessibility</a>
