--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -163,21 +163,18 @@
   </header>
 
   <!-- Content -->
-  <div class="uq-hero uq-hero--large">
-
-    <div class="uq-hero__image">
-      <img src="images/hero/hero-home.jpg" alt="" role="presentation">
-    </div>
+  <div class="uq-hero">
     <div class="uq-container">
       <div class="uq-hero__content">
         <h1 class="uq-hero__title">Design System</h1>
         <div class="uq-hero__description">
           <p>Styles, components, patterns and standards.</p>
         </div>
-
       </div>
     </div>
   </div>
+
+  
 
   <section class="uq-section">
     <div class="uq-container">
