fixed broken reference

--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -218,7 +218,7 @@
           <div class="uq-card__content">
 
 
-            <h3 class="uq-card__title"><a href="/storybook-html/">HTML, CSS, JS component library</a></h3>
+            <h3 class="uq-card__title"><a href="storybook-html/index.html">HTML, CSS, JS component library</a></h3>
             <div class="uq-card__description">Styles, components, patterns and standards.</div>
 
           </div>
@@ -229,7 +229,7 @@
           <div class="uq-card__content">
 
 
-            <h3 class="uq-card__title"><a href="/storybook-react/">REACT component library</a></h3>
+            <h3 class="uq-card__title"><a href="storybook-react/index.html">REACT component library</a></h3>
             <div class="uq-card__description">React is a JavaScript library primarily used for building user interfaces (UIs) for web applications and mobile apps</div>
 
           </div>
