--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -130,9 +130,9 @@
             </div>
             <div class="uq-header__search-range">
               <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch"
-                value="https://future-students.uq.edu.au" checked="checked" class="form-radio uq-header__search-radio">
+                value="https://design-system.uq.edu.au" checked="checked" class="form-radio uq-header__search-radio">
               <label for="edit-as_sitesearch-on" class="option uq-header__search-label">Search this website
-                (future-students.uq.edu.au)</label>
+                (design-system.uq.edu.au)</label>
             </div>
           </fieldset>
         </form>
