--- a/packages/uqds-builder/src/index.html
+++ b/packages/uqds-builder/src/index.html
@@ -56,10 +56,10 @@
           <a class="global-mobile-nav__audience-link slide-menu__control" href="#" data-gtm-label="Study">Build using the Design System</a>
           <ul>
             <li>
-              <a href="/storybook-html/" data-gtm-label="HTML, CSS, JS components">HTML, CSS, JS components</a>
+              <a href="storybook-html/index.html" data-gtm-label="HTML, CSS, JS components">HTML, CSS, JS components</a>
             </li>
             <li>
-              <a href="/storybook-react/" data-gtm-label="REACT component library">REACT component library</a>
+              <a href="storybook-react/index.html" data-gtm-label="REACT component library">REACT component library</a>
             </li>
             <li>
               <a href="https://www.figma.com/design/Li7SZkmaLgw8ZdiHje2q7x/One-UQ-component-library?m=auto&t=Qv6W7wBqvGj5S1EZ-6" data-gtm-label="FIGMA component library">FIGMA component library</a>
